Actions
Bug #14326
closeddt_unring_buf: set dtbd_oldest to the start of the first record
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Work by Andriy Gapon:
It was set to the start of the buffer and that can be different from the
start of the first record because of a misalignment.
This change follows the example of dt_realloc_buf().
https://reviews.freebsd.org/D33649
Testing done: in use in FreeBSD, my own testing on illumos has not shown unexpected results.
Updated by Electric Monk 7 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 050c24f35c93857f1022f99834086ade54e70547
commit 050c24f35c93857f1022f99834086ade54e70547 Author: Andriy Gapon <avg@FreeBSD.org> Date: 2022-01-25T19:09:51.000Z 14326 dt_unring_buf: set dtbd_oldest to the start of the first record Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Rich Lowe <richlowe@richlowe.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions