usr/src/lib/libdtrace/common/dt_consume.c
@@ -2599,7 +2599,7 @@ dt_unring_buf(dtrace_hdl_t *dtp, dtrace_bufdesc_t *buf)
 	bcopy(buf->dtbd_data, ndp, buf->dtbd_oldest);
 
 	dt_free(dtp, buf->dtbd_data);
-	buf->dtbd_oldest = 0;
+	buf->dtbd_oldest = misalign;
 	buf->dtbd_data = newdata;
 	buf->dtbd_size += misalign;
 
